@@ -1,3 +1,11 @@
+2005-09-22  Lluis Sanchez Gual  <lluis@novell.com> 
+
+	* Services/NUnitService.cs:
+	* Services/CombineTestGroup.cs:
+	* Services/NUnitProjectTestSuite.cs:
+	* Services/SystemTestProvider.cs: Only generate a test suite for
+	projects that reference the nunit.framework assembly.
+
 2005-08-12  Lluis Sanchez Gual  <lluis@novell.com> 
 
 	* templates/*:
